--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "core-js": "^2.5.4",
     "firebase": "^5.11.1",
     "hammerjs": "^2.0.8",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.1.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
