--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "grocery",
   "version": "1.0.0",
+  "main": "main.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4201",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "electron": "electron .",
+    "electron-build": "ng build --prod --base-href ./ && npm run electron .",
+    "pack-win32": "electron-packager . --platform=win32 --asar",
+    "pack-darwin": "electron-packager . --platform=darwin --asar",
+    "pack-all": "electron-packager . --all --asar"
   },
   "private": true,
   "dependencies": {
@@ -36,10 +42,12 @@
     "@angular/cli": "~7.3.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "electron": "^5.0.4",
+    "electron-packager": "^13.1.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
